<resources>
    <string name="app_name">Twitter</string>
    <string name="twitter_login">Twitterにログイン</string>
    <string name="hint_password">パスワード</string>
    <string name="hint_username">ユーザー名</string>
    <string name="hint_mailaddress">メールアドレス</string>
    <string name="loginbutton_text">ログイン</string>
    <string name="newaccount_text">アカウントの作成</string>
    <string name="return_login">ログイン画面に戻る</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="standard_height">70db</string>


    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_luncher">LuncherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>