<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="0dp"
    tools:context=".LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center_horizontal"
                android:text="@string/twitter_login"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="16dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/hint_mailaddress"
                android:inputType="textEmailAddress"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_edittext"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_button"
                android:clickable="true"
                android:text="@string/loginbutton_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="OnClick" />

            <TextView
                android:id="@+id/signupTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="@string/newaccount_text"
                android:textColor="@color/colorAccent"
                tools:ignore="OnClick" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginProcessLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>